# my-stt-tts

./: .claude-code-sessions  .env.example  .gitallowed  .gitignore  .markdownlint.jsonc  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PLAN.md  PLAN_backend_fixes.md  PLAN_brain_models_pause.md  PLAN_checker_loop.md  PLAN_diarization.md  PLAN_kws_detector.md  PLAN_mic_contention.md  PLAN_mic_debug_backend.md  PLAN_onboarding_loop.md  PLAN_porcupine_ideas.md  PLAN_readme_loop.md  PLAN_ux_queue.md  PLAN_wake_checker_loop.md  PLAN_wake_detection_fix.md  PLAN_wake_eval_toolkit.md  PLAN_wake_live_recall.md  PLAN_wake_overhaul.md  PLAN_wake_reliability.md  README.gemini-live-alternatives.md  README.md  README.microphone-hardware.md  README.relevant-git-repos.md  SECURITY.md  mstt  pyproject.toml  quickstart.sh
.github/workflows/: ci.yml
clients/: PROTOCOL.md  README.md
clients/mobile/: README.md
clients/web/: README.md  demo.html  my-stt-tts-client.js
docs/: DIARIZATION.md  gui.html  index.html
esp32/: .gitignore  README.md  platformio.ini
esp32/src/: main.cpp  secrets.h.example
prompts/: system_prompt.md
scripts/: _bootstrap.py  bench.py  bench_smart_turn.py  calibrate.py  enroll.py  enroll_wakeword.py  fetch_official_wakewords.py  test_wakeword.py
src/my_stt_tts/: __init__.py  __main__.py  active_learning.py  aec.py  agent.py  audio.py  brain.py  calibration.py  chimes.py  config.py  denoise.py  diarize.py  enrolled_wake.py  events.py  interrupt.py  kws.py  memory.py  metrics.py  music.py  net_loop.py  platform.py  preflight.py  realtime.py  registry.py  satellite.py  speaker_id.py  speaker_pipeline.py  spine.py  stt.py  stt_cloud.py  telephony.py  text.py  tools.py  transport.py  tts.py  tts_cloud.py  turn.py  util.py  vad.py  wake.py  (+6 more)
tests/: conftest.py  test_audio.py  test_audio_preflight.py  test_backend_fixes.py  test_bench_smart_turn.py  test_config.py  test_conversation.py  test_diarization.py  test_enroll.py  test_enrolled_wake.py  test_events.py  test_gui_voice.py  test_kws_detector.py  test_logic.py  test_memory.py  test_mic_contention.py  test_mic_debug_backend.py  test_mic_permission.py  test_mic_test.py  test_music.py  test_pipeline.py  test_platform.py  test_porcupine_ideas.py  test_registry.py  test_round2.py  test_round3.py  test_round3d.py  test_run_browser.py  test_speaker_wiring.py  test_text.py  test_tools.py  test_transport.py  test_wake_detection_fix.py  test_wake_eval_toolkit.py  test_wake_gain_diag.py  test_wake_model.py  test_wake_precise.py  test_wake_reliability.py  test_wake_temporal.py  test_wake_test_action.py  (+3 more)
wakewords/: WAKEWORD.md  alexa.onnx  athena.onnx  computer.onnx  jarvis.onnx  luna.onnx  maziko.onnx  nexus.onnx  nova.onnx  orion.onnx  sage.onnx
