[project]
name = "my-stt-tts"
version = "0.0.1"
description = "Local voice assistant for macOS Apple Silicon: wake-word -> on-device STT -> an LLM -> natural TTS, with speaker ID and DE/FR/EN."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [{ name = "Albert Glensk" }]
keywords = ["voice-assistant", "stt", "tts", "wake-word", "mlx", "apple-silicon", "claude", "llm"]
dependencies = [
    "python-dotenv>=1.0",
    "numpy>=1.26",
]

[project.optional-dependencies]
# Native/ML backends are opt-in extras so the core package stays light and the
# orchestrator imports without them (backends are lazy-imported). Prefer wheels
# that bundle native libs (uv-first; see AGENTS.md).
llm = ["anthropic>=0.40", "openai>=1.40"]
audio = ["sounddevice>=0.4"]
stt = ["parakeet-mlx"]
tts = ["mlx-audio"]
speaker = ["speechbrain", "torchaudio"]
vad = ["silero-vad", "webrtcvad-wheels"]
wake = ["openwakeword", "onnxruntime"]
lang = ["lingua-language-detector"]
# Hardware AEC (R2-1): macOS VoiceProcessingIO via PyObjC. The software NLMS
# canceller needs no extras (pure numpy), so this is only for the HW backend.
aec = ["pyobjc-framework-AVFoundation; sys_platform == 'darwin'"]
# Smart Turn v3 endpointing (R2-4): the ONNX runtime + the Whisper feature
# extractor. The model file itself is auto-downloaded on first run.
turn = ["onnxruntime", "transformers"]
# Network audio transport (R2-5): the WebSocket server/client for whole-house
# satellites + the browser GUI. Kept out of core deps so the orchestrator stays
# light; only needed when TRANSPORT=websocket or running the satellite client.
transport = ["websockets>=12"]
# True WebRTC transport (R3-1): aiortc gives a real RTCPeerConnection — Opus, a
# jitter buffer, RTP/SRTP, and ICE (STUN/TURN) NAT traversal — for TRANSPORT=webrtc
# and the browser RTCPeerConnection path. Pulls in `av` + `cryptography`; opt-in.
webrtc = ["aiortc>=1.9"]
# Pre-VAD noise suppression (R3-6): RNNoise via a wheel. The default `spectral`
# denoiser is pure-numpy (no extra needed); this is only for the RNNoise backend.
denoiser = ["pyrnnoise>=0.4"]
# Realtime speech-to-speech (R3-5) + Twilio telephony (R3-9) both ride the same
# `websockets` dep as the `transport` extra; no separate package is needed (the
# realtime/telephony protocols are pure-numpy here). Listed for documentation.
realtime = ["websockets>=12"]
telephony = ["websockets>=12"]
# Per-stage latency telemetry (R3-7) is dependency-free (stdlib logging + the bus);
# the OpenTelemetry span hook is OFF by default and only needs this extra when on.
otel = ["opentelemetry-api>=1.20", "opentelemetry-sdk>=1.20"]
# Real cloud backend adapters (G1). Each is key-gated + lazy-imported, with a
# dependency-light urllib HTTP fallback, so these extras are only needed if you
# prefer the official SDK over the built-in HTTP path. Kept out of core deps.
deepgram = ["deepgram-sdk>=3.0"]
elevenlabs = ["elevenlabs>=1.0"]
cartesia = ["cartesia>=1.0"]
# Cross-platform / off-Mac brain STT (G8): whisper.cpp (the wheel bundles the
# native runtime) or faster-whisper (CTranslate2) so STT runs on Linux without
# MLX. On Linux, AEC/denoise can additionally use webrtc-audio-processing.
whispercpp = ["pywhispercpp>=1.2"]
faster-whisper = ["faster-whisper>=1.0"]
linux-aec = ["webrtc-audio-processing>=0.1; sys_platform == 'linux'"]
all = ["my-stt-tts[llm,audio,stt,tts,speaker,vad,wake,lang,aec,turn,transport,webrtc]"]

[project.scripts]
my-stt-tts = "my_stt_tts.__main__:main"
my-stt-tts-satellite = "my_stt_tts.satellite:main"

[project.urls]
Homepage = "https://github.com/glensk/my-stt-tts"

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.6", "mypy>=1.11", "pylint>=3"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
extend-select = ["I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
